Changed default levels to main menu

--- a/AlienGame/Config/DefaultEngine.ini
+++ b/AlienGame/Config/DefaultEngine.ini
@@ -17,6 +17,8 @@ GlobalDefaultGameMode=/Game/Blueprints/GameMode/GM_BaseGameMode.GM_BaseGameMode_
 bUseSplitscreen=False
 GameInstanceClass=/Game/Blueprints/GameInstance/Instance_AliensVSGovernment.Instance_AliensVSGovernment_C
 bOffsetPlayerGamepadIds=True
+EditorStartupMap=/Game/Blueprints/Maps/Level_MainMenu.Level_MainMenu
+GameDefaultMap=/Game/Blueprints/Maps/Level_MainMenu.Level_MainMenu
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
