--- a/AlienGame/Config/DefaultInput.ini
+++ b/AlienGame/Config/DefaultInput.ini
@@ -52,8 +52,12 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="GamePadShoulderLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Left)
 +ActionMappings=(ActionName="GamePadShoulderRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
 +ActionMappings=(ActionName="GamePadShoulderLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
-+AxisMappings=(AxisName="GamePadThumbstickX",Scale=1.000000,Key=Gamepad_RightX)
-+AxisMappings=(AxisName="GamePadThumbstickY",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="MoveX",Scale=1.000000,Key=Gamepad_RightX)
++AxisMappings=(AxisName="MoveY",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="MoveX",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="MoveY",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="MoveX",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="MoveY",Scale=-1.000000,Key=S)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
