--- a/AlienGame/Config/DefaultEngine.ini
+++ b/AlienGame/Config/DefaultEngine.ini
@@ -12,6 +12,21 @@ bSupportsUpsideDownOrientation=False
 bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Blueprints/Maps/Level_MainMenu.Level_MainMenu
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=False
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=True
+GameInstanceClass=/Game/Blueprints/GameInstance/Instance_AliensVSGovernment.Instance_AliensVSGovernment_C
+GameDefaultMap=/Game/Blueprints/Maps/Level_MainMenu.Level_MainMenu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/GameMode/GM_BaseGameMode.GM_BaseGameMode_C
+GlobalDefaultServerGameMode=None
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -56,18 +71,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Blueprints/Maps/Level_MainMenu.Level_MainMenu
-LocalMapOptions=
-TransitionMap=None
-bUseSplitscreen=False
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-FourPlayerSplitscreenLayout=Grid
-bOffsetPlayerGamepadIds=True
-GameInstanceClass=/Game/Blueprints/GameInstance/Instance_AliensVSGovernment.Instance_AliensVSGovernment_C
-GameDefaultMap=/Game/Blueprints/Maps/Level_MainMenu.Level_MainMenu
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/MiniGames/MiniGame0/GM_MiniGame0.GM_MiniGame0_C
-GlobalDefaultServerGameMode=None
