--- a/AlienGame/Config/DefaultInput.ini
+++ b/AlienGame/Config/DefaultInput.ini
@@ -44,16 +44,20 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="GamePadFaceTop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
-+ActionMappings=(ActionName="GamePadFaceRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
-+ActionMappings=(ActionName="GamePadFaceLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
-+ActionMappings=(ActionName="GamePadFaceBottom",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
-+ActionMappings=(ActionName="GamePadShoulderRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Right)
-+ActionMappings=(ActionName="GamePadShoulderLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Left)
-+ActionMappings=(ActionName="GamePadShoulderRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
-+ActionMappings=(ActionName="GamePadShoulderLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
-+AxisMappings=(AxisName="MoveX",Scale=1.000000,Key=Gamepad_RightX)
-+AxisMappings=(AxisName="MoveY",Scale=1.000000,Key=Gamepad_RightY)
++ActionMappings=(ActionName="UIMoveLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Left)
++ActionMappings=(ActionName="UIMoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Right)
++ActionMappings=(ActionName="UIMoveUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Up)
++ActionMappings=(ActionName="UIMoveLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="UIMoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="UIMoveUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
++ActionMappings=(ActionName="UIStart",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
++ActionMappings=(ActionName="UIStart",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
++ActionMappings=(ActionName="Action1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Action2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
++ActionMappings=(ActionName="Action1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="Action2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++AxisMappings=(AxisName="MoveX",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="MoveY",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="MoveX",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveY",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveX",Scale=1.000000,Key=D)
