>>Adding latest changes >>>Added MiniGame 3 >>>Added Xandra's newest art assets >>>Changed Minigame structure >>>Added follower mechanics

--- a/AlienGame/Config/DefaultEngine.ini
+++ b/AlienGame/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Blueprints/Maps/Level_MainMenu.Level_MainMenu
+EditorStartupMap=/Game/Blueprints/Maps/Level_Lobby.Level_Lobby
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -22,9 +22,9 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=True
 GameInstanceClass=/Game/Blueprints/GameInstance/Instance_AliensVSGovernment.Instance_AliensVSGovernment_C
-GameDefaultMap=/Game/Blueprints/Maps/Level_MainMenu.Level_MainMenu
+GameDefaultMap=/Game/Blueprints/Maps/Level_Lobby.Level_Lobby
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/GameMode/GM_BaseGameMode.GM_BaseGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/GameMode/GM_Lobby.GM_Lobby_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.PhysicsSettings]
