--- a/AlienGame/Config/DefaultGame.ini
+++ b/AlienGame/Config/DefaultGame.ini
@@ -1,2 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=9D2BE65A4D3367CCC735F8BD8231A867
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "68F5D284494612E22615A0978A508022", "Alienated")
+ProjectName=Alienated
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
